--- a/code92/home.html
+++ b/code92/home.html
@@ -19,17 +19,17 @@
 
         <div class="container">
             <div class="title-anims">
-                <h1 class="spotlight">Code92 Productions</h1>
+                <h1 class="spotlight">Code<sup>92</sup> Productions</h1>
             </div>
         </div>
         <!-- img prefetches -->
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
-        <div class="nav"><a href="../">home</a> | <a href="#">code92</a> | <a href="404">contact</a> |
+        <div class="nav"><a href="../">home</a> | <a href="#">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
-        <div class="alert alert-danger" role="alert">
-            <center><a href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5 </a></center>
+        <div class="alert alert-info" role="alert">
+            <center><a  style="text-decoration:none; color:white;" href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5 now!Fixed bugs! New Branding! Excitement! Click Here!</a></center>
         </div>
         <div class="thisdivrocks">
     </head>
@@ -40,17 +40,21 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">Welcome to Code92</h1>
+                    <h1 class="spotlight">Welcome to Code<sup>92</sup></h1>
                     <p class="lead">We make Meteor Game and other stuff.</p>
                     <hr>
+                    <a class="lead" style="font-size:30px;" href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5</a>
                     <br>
+                    <hr>
                     <center>
                         <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                     </center>
                     <hr>
-                    
-                    <br>
-                    <br>
+                    <p class="lead" style="font-size:30px";>Previous Versions of Meteor Game</p>
+                    <hr>
+                    <p class="lead">You can also download previous versions of Meteor Game! Amazing!</p>
+                    <br><p class="lead">
+                    Coming soon (probably)</p>
                 </div>
             </div>
         </div>
