--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- img prefetches -->
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
-        <div class="nav"><a href="#">home</a> | <a href="code92/home">code92</a> | <a href="404">contact</a> |
+        <div class="nav"><a href="#">home</a> | <a href="code92/home">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
         <div class="alert alert-danger" role="alert">
@@ -47,7 +47,7 @@
                     <center>
                         <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                     </center>
-                    <hr>I'd put things here, but I'm lazy. Go check out <a href="/code92/home">code92</a>, my production crew.
+                    <hr>I'd put things here, but I'm lazy. Go check out <a href="/code92/home">code<sup>92</sup></a>, my production crew.
                     <br>
                     <br>
                 </div>
