--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <div class="showcase">
     <title>Mark Gambardella</title>
     <!-- STYLESHEETS -->
-    <link href="core/css/main.min.css" rel="stylesheet">
-    <link href="core/css/special.css" rel="stylesheet">
-    <link href="core/css/anims.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="core/img/favicon.png">
+    <link href="http://stormyjet.com/core/css/main.min.css" rel="stylesheet">
+    <link href="http://stormyjet.com/core/css/special.css" rel="stylesheet">
+    <link href="http://stormyjet.com/core/css/anims.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="http://stormyjet.com/core/img/favicon.png">
     <!-- MAIN PAGE CONTENT! -->
     <div class="biganims">
         <p class="headline">404 - cannot find the page</p>
@@ -13,7 +13,7 @@
     <h1 class="deadmanloader">Looks like the page did not load correctly. Please refresh.</h1>
     <div class="navholder">
         <div class="anim">
-            <a href="index.html" class="scaffold" style="margin-right:200px;">click here to go to the homepage.</a>
+            <a href="http://stormyjet.com/" class="scaffold" style="margin-right:200px;">click here to go to the homepage.</a>
         </div>
     </div>
 
