--- a/code92/home.html
+++ b/code92/home.html
@@ -28,8 +28,9 @@
         <div class="nav"><a href="../">home</a> | <a href="#">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
-        <div class="alert alert-info" role="alert">
-            <center><a  style="text-decoration:none; color:white;" href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5 now! Fixed bugs! New Branding! Excitement! Click Here!</a></center>
+        <div class="container">
+        <div class="alert alert-danger" role="alert">
+            <center><a  style="text-decoration:none; color:white;" href="#">Meteor Game 2.5 is coming soon, don't download fakes!</a></center></div>
         </div>
         <div class="thisdivrocks">
     </head>
@@ -41,9 +42,9 @@
             <div class="anim-up">
                 <div class="jumbotron">
                     <h1 class="spotlight">Welcome to Code<sup>92</sup></h1>
-                    <p class="lead">We make Meteor Game and other stuff.</p>
+                    <p class="lead">We make Meteor Game and other secret stuff.</p>
                     <hr>
-                    <a class="lead" style="font-size:30px;" href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5</a>
+                    <a class="lead" style="font-size:30px;" href="#">Meteor Game DL coming soon</a>
                     <br>
                     <hr>
                     <center>
