--- a/code92/home.html
+++ b/code92/home.html
@@ -12,14 +12,14 @@
         <link rel="stylesheet" href="../core/css/main.min.css">
         <link rel="stylesheet" href="../core/css/bootstrap.min.css">
         <link rel="stylesheet" href="../core/css/anims.css">
-        <link rel="stylesheet" href="../core/css/anims.css">
+        <link rel="stylesheet" href="/core/special/css/code92.css">
         <script src="../core/js/bootstrap.min.js"></script>
         <link rel="icon" type="image/png" href="../core/img/favicon.png">
         <!--favicon-->
 
         <div class="container">
             <div class="title-anims">
-                <h1 class="spotlight">Code<sup>92</sup> Productions</h1>
+                <h1 class="code92">Code<sup>92</sup> Productions</h1>
             </div>
         </div>
         <!-- img prefetches -->
