--- a/code92/home.html
+++ b/code92/home.html
@@ -12,14 +12,13 @@
         <link rel="stylesheet" href="../core/css/main.min.css">
         <link rel="stylesheet" href="../core/css/bootstrap.min.css">
         <link rel="stylesheet" href="../core/css/anims.css">
-        <link rel="stylesheet" href="/core/special/css/code92.css">
         <script src="../core/js/bootstrap.min.js"></script>
         <link rel="icon" type="image/png" href="../core/img/favicon.png">
         <!--favicon-->
 
         <div class="container">
             <div class="title-anims">
-                <h1 class="code92">Code<sup>92</sup> Productions</h1>
+                <h1 class="code92">Code<sup>92</sup></h1>
             </div>
         </div>
         <!-- img prefetches -->
@@ -29,8 +28,7 @@
         </div>
         <br>
         <div class="container">
-        <div class="alert alert-danger" role="alert">
-            <center><a  style="text-decoration:none; color:white;" href="#">Meteor Game 2.5 is coming soon, don't download fakes!</a></center></div>
+    
         </div>
         <div class="thisdivrocks">
     </head>
@@ -41,21 +39,22 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">Welcome to Code<sup>92</sup></h1>
-                    <p class="lead">We make Meteor Game and other secret stuff.</p>
+                    <h1 class="code92">Welcome to Code<sup>92</sup> </h1>
+                    <p class="lead">We make Meteor Game and other more secreter stuff.</p>
                     <hr>
-                    <a class="lead" style="font-size:30px;" href="#">Meteor Game DL coming soon</a>
+                    <a class="lead" style="font-size:30px;" href="/meteor/">Offical Meteor Game website!</a>
                     <br>
                     <hr>
-                    <center>
-                        <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-                    </center>
+                    <p class="code92" style="font-size:30px";>What we do</p>
                     <hr>
-                    <p class="lead" style="font-size:30px";>Previous Versions of Meteor Game</p>
+                    <p class="lead">We create games at Code<sup>92</sup>. The one that is most known is Meteor Game, but we have other things coming soon</p>
                     <hr>
-                    <p class="lead">You can also download previous versions of Meteor Game! Amazing!</p>
-                    <br><p class="lead">
-                    Coming soon (probably)</p>
+                    <p class="code92" style="font-size:30px";>Contact Us</p>
+                    <hr>
+                    <p class="lead">Have an inquiry? Want support? Send hate mail? Need something else? <br>
+                    You can send an email to <kbd>code92 'at' this domain</kbd>
+                    </p>
+                    
                 </div>
             </div>
         </div>
@@ -64,7 +63,8 @@
     <foot>
         <div class="container">
             <hr>
-            <p class="lead">&copy; StormyJet 2015
+            <small>Code<sup>92</sup> <span class="glyphicon glyphicon-heart"></span> you</small>
+            <p class="lead">&copy; StormyJet (and subsidaries) 2015
                 <br>This website uses portions of code from the Twitter Bootstrap project</p>
         </div>
     </foot>
