--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 <div class="showcase">
-    <title>Mark Gambardella</title>
+    <title>404</title>
     <!-- STYLESHEETS -->
     <link href="http://stormyjet.com/core/css/main.min.css" rel="stylesheet">
     <link href="http://stormyjet.com/core/css/special.css" rel="stylesheet">
