--- a/code92/home.html
+++ b/code92/home.html
@@ -42,7 +42,7 @@
                     <h1 class="code92">Welcome to Code<sup>92</sup> </h1>
                     <p class="lead">We make Meteor Game and other more secreter stuff.</p>
                     <hr>
-                    <a class="lead" style="font-size:30px;" href="/meteor/">Offical Meteor Game website!</a>
+                    <a class="lead" style="font-size:30px;" href="/meteor/index">Offical Meteor Game website!</a>
                     <br>
                     <hr>
                     <p class="code92" style="font-size:30px";>What we do</p>
