--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="nav"><a href="#">home</a> | <a href="code92/home">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
-        <div class="alert alert-danger" role="alert">
+        <!--<div class="alert alert-danger" role="alert">
             <center><strong>Hey, Listen!</strong> This site is in <strong>early alpha!</strong> Things will be broken!</center>
-        </div>
+        </div>-->
         <div class="thisdivrocks">
     </head>
     <br>
@@ -44,6 +44,9 @@
                     <p class="lead">I am Stormy and this is my website</p>
                     <hr>
                     <br>
+                    <a class="lead" href="core/turnip.zip">Click here for turnip</a>
+                    <br>
+                    <hr>
                     <center>
                         <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                     </center>
