--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     <p class="lead">I am Stormy and this is my website</p>
                     <hr>
                     <br>
-                    <a class="lead" href="core/turnip.zip">Click here for turnip</a>
+                    <p class="lead"> <a href="core/turnip.zip">Click here for turnip</a>
+                    </p>
                     <br>
                     <hr>
                     <center>
