--- a/code92/home.html
+++ b/code92/home.html
@@ -24,11 +24,11 @@
         <!-- img prefetches -->
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
-        <div class="nav"><a href="../">home</a> | <a href="#">code<sup>92</sup></a> | <a href="404">contact</a> |
+        <div class="nav"><a href="../">home</a> | <a href="#">code<sup>92</sup></a> | <a href="../contact.html">contact</a> |
         </div>
         <br>
         <div class="container">
-    
+
         </div>
         <div class="thisdivrocks">
     </head>
@@ -42,19 +42,19 @@
                     <h1 class="code92">Welcome to Code<sup>92</sup> </h1>
                     <p class="lead">We make Meteor Game and other more secreter stuff.</p>
                     <hr>
-                    <a class="lead" style="font-size:30px;" href="/meteor/index">Offical Meteor Game website!</a>
+                    <a class="lead" style="font-size:30px;" href="meteor/index.html">Offical Meteor Game website!</a>
                     <br>
                     <hr>
-                    <p class="code92" style="font-size:30px";>What we do</p>
+                    <p class="code92" style="font-size:30px" ;>What we do</p>
                     <hr>
                     <p class="lead">We create games at Code<sup>92</sup>. The one that is most known is Meteor Game, but we have other things coming soon</p>
                     <hr>
-                    <p class="code92" style="font-size:30px";>Contact Us</p>
+                    <p class="code92" style="font-size:30px" ;>Contact Us</p>
                     <hr>
-                    <p class="lead">Have an inquiry? Want support? Send hate mail? Need something else? <br>
-                    You can send an email to <kbd>code92 'at' this domain</kbd>
+                    <p class="lead">Have an inquiry? Want support? Send hate mail? Need something else?
+                        <br> You can send an email to <kbd>code92 'at' this domain</kbd>
                     </p>
-                    
+
                 </div>
             </div>
         </div>
