--- a/code92/meteor/index.html
+++ b/code92/meteor/index.html
@@ -1,5 +1,79 @@
-<html><center>
-<h1 style="font-size:200px;">Coming Soon</h1>
-<br>
-    <a style="font-size:50px;" href="../../">Go home</a>
-</center></html>
+<html>
+<title>Stormy's Website</title>
+<div class="tupperware">
+    <script>
+        console.log("Don't look at my horrible code pls")
+    </script>
+
+    <head>
+        <img src="core/img/mainbg.jpg" class="hidden">
+        <!-- try to prefetch bg image-->
+        <!--css-->
+        <link rel="stylesheet" href="../../core/css/main.min.css">
+        <link rel="stylesheet" href="../../core/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../core/css/anims.css">
+        <script src="../../core/js/bootstrap.min.js"></script>
+        <link rel="icon" type="image/png" href="../../core/img/favicon.png">
+        <!--favicon-->
+
+        <div class="container">
+            <div class="title-anims">
+                <h1 class="code92">Meteor Game</h1>
+            </div>
+        </div>
+        <!-- img prefetches -->
+        <link href="core/img/mainbg.jpg" rel="prefetch">
+        <!-- nav -->
+        <div class="nav"><a href="../">home</a> | <a href="../home.html">code<sup>92</sup></a> | <a href="../../contact.html">contact</a> |
+        </div>
+        <br>
+        <div class="container">
+
+        </div>
+        <div class="thisdivrocks">
+    </head>
+    <br>
+    <br>
+
+    <body>
+        <div class="container">
+            <div class="anim-up">
+                <div class="jumbotron">
+                    <h1 class="spotlight">The website for Meteor Game</h1>
+                    <p class="lead">Currently version <kbd>2.2.0.0</kbd>
+                    </p>
+                    <hr>
+                    <a class="lead" style="font-size:30px;" href="https://mega.co.nz/#!iV5SnLYR!5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c">Download for free now</a>
+                    <br>
+                    <hr>
+                    <!--<small>Just in case, the download key is <kbd>5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c
+</kbd>
+                    </small>-->
+                    <hr>
+                    <p class="code92" style="font-size:30px">What was changed</p>
+                    <hr>
+                    <p class="lead">In version 2.2 the ability for endless mode was added. You can play in hard, normal, or easy mode. In addition many bugs were fixed.
+                        <hr>
+                        <p class="code92" style="font-size:30px" ;>Contact Us</p>
+                        <hr>
+                        <p class="lead">Need help?
+                            <br> You can send an email to <kbd>meteorgame 'at' this domain</kbd>
+                        </p>
+
+                </div>
+            </div>
+        </div>
+    </body>
+    </div>
+    <foot>
+        <div class="container">
+            <hr>
+            <p class="lead">&copy; StormyJet (and subsidaries) 2015
+                <br>This website uses portions of code from the Twitter Bootstrap project</p>
+            <p class="code92small"><a href="../home.html">Code<sup>92</sup> Productions</a>
+            </p>
+        </div>
+    </foot>
+</div>
+
+</html>
