added alerts n stuff

--- a/code92/meteor/index.html
+++ b/code92/meteor/index.html
@@ -39,25 +39,30 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">The website for Meteor Game</h1>
-                    <p class="lead">Currently version <kbd>2.2.0.0</kbd>
+                    <h1 class="spotlight">The website for Meteor Game</h1>you found it
                     </p>
                     <hr>
-                    <a class="lead" style="font-size:30px;" href="https://mega.co.nz/#!iV5SnLYR!5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c">Download for free now</a>
+                    <h1 class="spotlight"><a href="https://mega.co.nz/#!iV5SnLYR!5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c">Download it for free now</a></h1>
+                    <br>
+                    <small>If anyone is charging you for this game, you're probably being ripped off. </small>
                     <br>
                     <hr>
-                    <!--<small>Just in case, the download key is <kbd>5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c
-</kbd>
-                    </small>-->
-                    <hr>
                     <p class="code92" style="font-size:30px">What was changed</p>
+                    <br>
+                    <p class="lead">The Current Version of the game is <kbd>2.2.0.0</kbd> which is codenamed <kbd>16th street</kbd>
+                    </p>
                     <hr>
-                    <p class="lead">In version 2.2 the ability for endless mode was added. You can play in hard, normal, or easy mode. In addition many bugs were fixed.
+                    <p class="lead">In version 2.2 the ability for endless mode was added. You can play in hard, normal, or easy mode. In addition many bugs were fixed. Dev Mode still is in the game and still has not been found, GG everyone.
                         <hr>
-                        <p class="code92" style="font-size:30px" ;>Contact Us</p>
+                        <p class="code92" style="font-size:30px" ;>Need help?
+                            <br> or need to send hatemail, whatever</p>
                         <hr>
-                        <p class="lead">Need help?
-                            <br> You can send an email to <kbd>meteorgame 'at' this domain</kbd>
+                        <p class="lead">
+                            You can send an email to <kbd>meteorgame 'at' this domain</kbd> to probably get whatever you need.
+
+                        </p>
+                        <hr>
+                        <p>If, for whatever reason, the download requires a key of some sort, it is <kbd>5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c</kbd>
                         </p>
 
                 </div>
