--- a/secret/list.html
+++ b/secret/list.html
@@ -25,12 +25,11 @@
         <!-- img prefetches -->
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
-        <div class="nav"><a href="#">home</a> | <a href="code92/home">code<sup>92</sup></a> | <a href="404">contact</a> |
+        <div class="nav"><a href="/">home</a> | <a href="code92/home">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
         <div class="alert alert-info" role="alert">
-            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
-            </center>
+            <center><strong>Hey, Listen!</strong> This page contains my <strong>opionions!</strong> They may not coincide with your own. </center>
         </div>
         <div class="thisdivrocks">
     </head>
@@ -41,25 +40,25 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">Hey there!</h1>
-                    <p class="lead">I am Stormy and this is my website</p>
+                    <h1 class="spotlight">Welcome to the most opionated page on the internet</h1>
                     <hr>
-
-                    <p class="lead">Some links for your pleasure</p>
-                    <p class="lead"> <a href="core/turnip.zip">zip folder with 16000+ pictures of turnips</a>
-                        <br>
-                        <!--<a href="list.html">The List</a>-->
-
-                        <a href="ray.html">RIP Ray</a>
-                    </p>
-                    </p>
-                    <hr>
-                    <center>
-                        <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-                    </center>
-                    <hr>
+                    <p class="lead">This is a thing where I give you my 10/10's in some subjects.</p>
+                    <p class="lead">Section 1: Games</p>
                     <br>
-                    <br>
+                    <hr>
+                    <p class="lead">
+                        <ol>
+                            <p class="lead">
+                                <li>
+                                    <p class="lead">Deus Ex: Human Revolution
+                                        <br> I personally love DX:HR. It has great mechanics and story telling. THe story is great until you reach the ending.
+                                </li>
+                                <li class="lead">
+                                    Life is Strange
+                                    <br> This was written when up to episode 3 was out. I loved this game,
+                                </li>
+                        </ol>
+                        </p>
                 </div>
             </div>
         </div>
