--- a/code92/home.html
+++ b/code92/home.html
@@ -30,6 +30,10 @@
         <div class="container">
 
         </div>
+        <div class="alert alert-info" role="alert">
+            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
+            </center>
+        </div>
         <div class="thisdivrocks">
     </head>
     <br>
