--- a/404.html
+++ b/404.html
@@ -1,26 +1,77 @@
+
 <html>
-<div class="showcase">
-    <title>404</title>
-    <!-- STYLESHEETS -->
-    <link href="http://stormyjet.com/core/css/main.min.css" rel="stylesheet">
-    <link href="http://stormyjet.com/core/css/special.css" rel="stylesheet">
-    <link href="http://stormyjet.com/core/css/anims.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="http://stormyjet.com/core/img/favicon.png">
-    <!-- MAIN PAGE CONTENT! -->
-    <div class="biganims">
-        <p class="headline">404 - cannot find the page</p>
-    </div>
-    <h1 class="deadmanloader">Looks like the page did not load correctly. Please refresh.</h1>
-    <div class="navholder">
-        <div class="anim">
-            <a href="http://stormyjet.com/" class="scaffold" style="margin-right:200px;">click here to go to the homepage.</a>
+<title>Stormy's Website</title>
+<div class="tupperware">
+    <script>
+        console.log("Don't look at my horrible code pls")
+    </script>
+
+    <head>
+        <img src="core/img/mainbg.jpg" class="hidden">
+        <!-- try to prefetch bg image-->
+        <!--css-->
+        <link rel="stylesheet" href="http://stormyjet.com/core/css/main.min.css">
+        <link rel="stylesheet" href="http://stormyjet.com/core/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
+        <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
+        <script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
+        <link rel="icon" type="image/png" href="http://stormyjet.com/core/img/favicon.png">
+        <!--favicon-->
+
+        <div class="container">
+            <div class="title-anims">
+                <h1 class="spotlight">stormy's website</h1>
+            </div>
         </div>
+        <!-- img prefetches -->
+        <link href="core/img/mainbg.jpg" rel="prefetch">
+        <!-- nav -->
+        <div class="nav"><a href="http://stormyjet.com">home</a> | <a href="http://stormyjet.com/code92/home">code<sup>92</sup></a> | <a href="http://stormyjet.com/contact">contact</a> |
+        </div>
+        <br>
+        <div class="alert alert-info" role="alert">
+            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
+            </center>
+        </div>
+        <div class="thisdivrocks">
+    </head>
+    <br>
+    <br>
+
+    <body>
+        <div class="container">
+            <div class="anim-up">
+                <div class="jumbotron">
+                    <h1 class="spotlight">You're lost!</h1>
+                    <p class="lead"><h2>
+                        <script>
+                            //var str = ;
+                            //str = str.replace("stormyjet.com", "");
+                            //document.write(str);
+                            document.write(document.URL)
+                        </script>
+                        isn't even real!</h2></p>
+                    <hr>
+
+                    <p class="lead">Some links for your pleasure</p>
+                    <p class="lead"> <a href="http://stormyjet.com/">go to the homepage</a>
+                        <br>
+                        <!--<a href="list.html">The List</a>-->
+                    <hr>
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </body>
     </div>
-
+    <foot>
+        <div class="container">
+            <hr>
+            <p class="lead">&copy; StormyJet 2015
+                <br>This website uses portions of code from the Twitter Bootstrap project</p>
+        </div>
+    </foot>
 </div>
-
-
-
-
 
 </html>
