--- a/code92/home.html
+++ b/code92/home.html
@@ -31,7 +31,7 @@
 
         </div>
         <div class="alert alert-info" role="alert">
-            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
+            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="meteor/index.html"><strong>Click here to check it out!</strong></a>
             </center>
         </div>
         <div class="thisdivrocks">
