--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- img prefetches -->
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
-        <div class="nav"><a href="#">home</a> | <a href="code92/home">code<sup>92</sup></a> | <a href="404">contact</a> |
+        <div class="nav"><a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
         <div class="alert alert-info" role="alert">
