--- a/code92/meteor/index.html
+++ b/code92/meteor/index.html
@@ -42,7 +42,7 @@
                     <h1 class="spotlight">The website for Meteor Game</h1>you found it
                     </p>
                     <hr>
-                    <h1 class="spotlight"><a href="https://mega.co.nz/#!iV5SnLYR!5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c">Download it for free now</a></h1>
+                    <h1 class="spotlight"><a href="https://mega.nz/#!iV5SnLYR!5sMOYqf4D2USypMUo2LipmN5T7ryLmehdh-jdKNX36c">Download it for free now</a></h1>
                     <br>
                     <small>If anyone is charging you for this game, you're probably being ripped off. </small>
                     <br>
