--- a/network/content.html
+++ b/network/content.html
@@ -20,7 +20,7 @@
 
         <div class="container">
             <div class="title-anims">
-                <h1 class="spotlight"><h1 class="content">content</h1><h1 class="network">.network</h1></h1>
+                <center><h1 class="spotlight"><h1 class="content" style="white-space:nowrap;">content</h1><h1 class="network" style="white-space:nowrap;">.network</h1></h1></center>
             </div>
         </div>
         <!-- img prefetches -->
