--- a/index.html
+++ b/index.html
@@ -1,77 +1,69 @@
+<!DOCTYPE html>
 <html>
-<title>Stormy's Website</title>
-<div class="tupperware">
-    <script>
-        console.log("Don't look at my horrible code pls")
-    </script>
+<title>StormyJet.com</title>
 
-    <head>
-        <img src="core/img/mainbg.jpg" class="hidden">
-        <!-- try to prefetch bg image-->
-        <!--css-->
-        <link rel="stylesheet" href="core/css/main.min.css">
-        <link rel="stylesheet" href="core/css/bootstrap.min.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <script src="core/js/bootstrap.min.js"></script>
-        <link rel="icon" type="image/png" href="core/img/favicon.png">
-        <!--favicon-->
+<script>
+    console.log("Don't look at my horrible code pls")
+</script>
 
+<head>
+    <!-- try to prefetch bg image-->
+    <link rel="prefetch" href="https://stormyjet.com/core/img/main-bg.jpg">
+    <!--css-->
+    <link rel="stylesheet" href="https://stormyjet.com/core/css/main.css">
+    <link rel="stylesheet" href="https://stormyjet.com/core/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stormyjet.com/core/css/anims.css">
+    <!-- i tried to make the text have the background of a planet thing but it didn't work out well
+    <script src="https://stormyjet.com/core/js/modern.js"></script>
+    <script src="https://stormyjet.com/core/js/bootstrap.min.js"></script>
+    <script src="https://stormyjet.com/core/js/check.js"></script>-->
+    <div class="thisdivrocks">
         <div class="container">
-            <div class="title-anims">
-                <h1 class="spotlight">stormy's website</h1>
-            </div>
-        </div>
-        <!-- img prefetches -->
-        <link href="core/img/mainbg.jpg" rel="prefetch">
-        <!-- nav -->
-        <div class="nav"><a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a> |
-        </div>
-        <br>
-        <div class="alert alert-info" role="alert">
-            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
-            </center>
-        </div>
-        <div class="thisdivrocks">
-    </head>
-    <br>
-    <br>
-
-    <body>
-        <div class="container">
-            <div class="anim-up">
-                <div class="jumbotron">
-                    <h1 class="spotlight">Hey there!</h1>
-                    <p class="lead">I am Stormy and this is my website</p>
-                    <hr>
-
-                    <p class="lead">Some links for your pleasure</p>
-                    <p class="lead"> <a href="core/turnip.zip">zip folder with 16000+ pictures of turnips</a>
-                        <br>
-                        <!--<a href="list.html">The List</a>-->
-
-                        <a href="ray.html">RIP Ray</a>
-                    </p>
-                    </p>
-                    <hr>
-                    <center>
-                        <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <div class="stage">
+                <div class="title-anims">
+                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
+                </div>
+                <div class="nav" style="text-align:center;"><a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a>
+                </div>
+                <br>
+                <div class="alert alert-info" role="alert">
+                    <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
                     </center>
-                    <hr>
-                    <br>
-                    <br>
                 </div>
             </div>
         </div>
-    </body>
-    </div>
-    <foot>
-        <div class="container">
-            <hr>
-            <p class="lead">&copy; StormyJet 2015
-                <br>This website uses portions of code from the Twitter Bootstrap project</p>
+</head>
+
+<body>
+    <div class="container">
+        <div class="anim-up">
+            <div class="jumbotron">
+                <h1 class="spotlight">Hey there!</h1>
+                <p class="lead">I am Stormy and this is my website</p>
+                <hr>
+
+                <p class="lead">Some links for your pleasure</p>
+                <p class="lead"> <a href="core/turnip.zip">zip folder with 16000+ pictures of turnips</a>
+                    <br>
+                    <!--<a href="list.html">The List</a>-->
+
+                    <a href="ray.html">RIP Ray</a>
+                </p>
+                </p>
+                <hr>
+                <center>
+                    <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                </center>
+            </div>
         </div>
-    </foot>
-</div>
+    </div>
+    </div>
+</body>
+<foot>
+    <center>
+        <p style="text-align:right;margin-right:5px;">&real;<sub>&#9916;</sub><sup>7</sup></p>
+    </center>
+</foot>
+<!-- end of code-->
 
 </html>
