--- a/network/content.html
+++ b/network/content.html
@@ -27,8 +27,8 @@
         <link href="core/img/mainbg.jpg" rel="prefetch">
         <!-- nav -->
         <div class="nav"><br>
-        <a>.network</a> | <a href="index.html">.network home</a> | <a href="#">content</a> | <a>coming soon</a><br>  
-        <a>stormyjet.com</a> | <a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a> |
+        <p>.network</p> | <a href="index.html">.network home</a> | <a href="#">content</a> | <a>coming soon</a><br>  
+        <p>stormyjet.com</p> | <a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a> |
         </div>
         <br>
         <div class="alert alert-info" role="alert">
