--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
                 <h1 class="spotlight">stormy's website</h1>
             </div>
         </div>
-        <!-- img prefetches -->
-        <link href="core/img/mainbg.jpg" rel="prefetch">
-        <!-- nav -->
-        <div class="nav"><a href="#">home</a> | <a href="code92/">code<sup>92</sup></a> | <a href="404">contact</a> |
-        </div>
-        <br>
-        <div class="alert alert-info" role="alert">
-            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
-            </center>
-        </div>
         <div class="thisdivrocks">
     </head>
     <br>
@@ -41,25 +31,17 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">Hey there!</h1>
-                    <p class="lead">I am Stormy and this is my website</p>
+                    <h1 class="spotlight">Under Construction</h1>
                     <hr>
 
-                    <p class="lead">Some links for your pleasure</p>
-                    <p class="lead"> <a href="core/turnip.zip">zip folder with 16000+ pictures of turnips</a>
+                    <p class="lead">You're probably here for my website. Sadly it's down right now because I don't know how to make CSS work correctly. It will be back soon
+                        <br> &hearts; stormy
                         <br>
-                        <!--<a href="list.html">The List</a>-->
-
-                        <a href="ray.html">RIP Ray</a>
-                    </p>
-                    </p>
-                    <hr>
-                    <center>
-                        <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-                    </center>
-                    <hr>
-                    <br>
-                    <br>
+                        <br> Coming soon: better looking site utilizing a new custom stylesheet. nothing spectacular
+                        <hr>
+                        <br>
+                        <abbr title="create3 is a modern stylesheet for today's modern world">&#391;<sub>3</sub><sup>7&#9916;</sup></abbr>
+                        <br>
                 </div>
             </div>
         </div>
@@ -68,8 +50,8 @@
     <foot>
         <div class="container">
             <hr>
-            <p class="lead">&copy; StormyJet 2015
-                <br>This website uses portions of code from the Twitter Bootstrap project</p>
+            <p class="lead" style="text-align:right;">&#391;<sub>3</sub><sup>7&#9916;</sup>
+                <br>&copy; 2015 Stormy</p>
         </div>
     </foot>
 </div>
