--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </script>
 
     <head>
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <img src="core/img/mainbg.jpg" class="hidden">
         <!-- try to prefetch bg image-->
         <!--css-->
