--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="anim-up">
                 <div class="jumbotron">
-                    <h1 class="spotlight">Under Construction</h1>
+                    <h1 class="spotlight">In Dev</h1>
                     <hr>
 
                     <p class="lead">You're probably here for my website. Sadly it's down right now because I don't know how to make CSS work correctly. It will be back soon
