--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <script>
         console.log("Don't look at my horrible code pls")
     </script>
+    <!-- check if user is using https or not, if not, tell them to-->
+    <script>
+        if (window.location.protocol != "https:")
+            document.getElementById(https).innerHTML = "<div class="
+        alert alert - danger " role="
+        alert ">Your connection to this website is not secure</div>"
+    </script>
 
     <head>
         <meta name=viewport content="width=device-width, initial-scale=1">
