--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         alert alert - danger " role="
         alert ">Your connection to this website is not secure</div>"
     </script>
+    <div class="https"></div>
 
     <head>
         <meta name=viewport content="width=device-width, initial-scale=1">
