--- a/index.html
+++ b/index.html
@@ -1,59 +1,55 @@
 <html>
-<title>Stormy's Website</title>
-<div class="tupperware">
-    <script>
-        console.log("Don't look at my horrible code pls")
-    </script>
+<title>stormy's website</title>
 
-    <head>
-        <img src="core/img/mainbg.jpg" class="hidden">
-        <!-- try to prefetch bg image-->
-        <!--css-->
-        <link rel="stylesheet" href="core/css/main.min.css">
-        <link rel="stylesheet" href="core/css/bootstrap.min.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <script src="core/js/bootstrap.min.js"></script>
-        <link rel="icon" type="image/png" href="core/img/favicon.png">
-        <!--favicon-->
+<script>
+    console.log("Don't look at my horrible code pls")
+</script>
 
+<head>
+    <!-- try to prefetch bg image-->
+    <link rel="prefetch" href="core/img/main-bg.jpg">
+    <!--css-->
+    <link rel="stylesheet" href="core/css/main.css">
+    <link rel="stylesheet" href="core/css/bootstrap.mod.css">
+    <link rel="stylesheet" href="core/css/anims.css">
+    <div class="thisdivrocks">
         <div class="container">
-            <div class="title-anims">
-                <h1 class="spotlight">stormy's website</h1>
-            </div>
-        </div>
-        <div class="thisdivrocks">
-    </head>
-    <br>
-    <br>
-
-    <body>
-        <div class="container">
-            <div class="anim-up">
-                <div class="jumbotron">
-                    <h1 class="spotlight">Under Construction</h1>
-                    <hr>
-
-                    <p class="lead">You're probably here for my website. Sadly it's down right now because I don't know how to make CSS work correctly. It will be back soon
-                        <br> &hearts; stormy
-                        <br>
-                        <br> Coming soon: better looking site utilizing a new custom stylesheet. nothing spectacular
-                        <hr>
-                        <br>
-                        <abbr title="create3 is a modern stylesheet for today's modern world">&#391;<sub>3</sub><sup>7&#9916;</sup></abbr>
-                        <br>
+            <div class="stage">
+                <div class="title-anims">
+                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
                 </div>
             </div>
         </div>
-    </body>
-    </div>
-    <foot>
-        <div class="container">
-            <hr>
-            <p class="lead" style="text-align:right;">&#391;<sub>3</sub><sup>7&#9916;</sup>
-                <br>&copy; 2015 Stormy</p>
+</head>
+
+<body>
+    <div class="container">
+        <div class="anim-up">
+            <div class="jumbotron">
+                <h1 class="spotlight">Hello</h1>
+                <center>
+                    <p class="fancy">My name is Stormy and this is my website
+
+                </center>
+                </p>
+                <hr>
+                <p class="fancy">I should put content here.</p>
+                <br>
+            </div>
         </div>
-    </foot>
-</div>
+    </div>
+    </div>
+</body>
+<foot>
+    <center>
+        <br>
+        <p class="fancy" style="text-size:15px;"></p>
+        <p id="copy" class="legible">
+            <div style="float:right;margin-right:15px;">
+                <a style="text-decoration:none" class="fancy" href="create/">&#391;<sub>3</sub><sup>7&#9916;</sup></a>
+            </div>
+    </center>
+</foot>
+<!-- end of code-->
 
 </html>
