--- a/create/index.html
+++ b/create/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Saturn</title>
+<title>Create3</title>
 
 <script>
     console.log("Don't look at my horrible code pls")
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="stage">
                 <div class="title-anims">
-                    <h1 class="actor" style="color:#FFFFFF">&#391;<sub>3</sub></h1>
+                    <h1 class="actor" style="color:#FFFFFF">create<sub>3</sub></h1>
                 </div>
             </div>
         </div>
@@ -26,14 +26,36 @@
     <div class="container">
         <div class="anim-up">
             <div class="jumbotron">
-                <h1 class="spotlight">Hello</h1>
+                <h1 class="spotlight">create<sub>3</sub></h1>
                 <center>
-                    <p class="fancy">My name is Stormy and this is my website
+                    <p class="fancy">create<sub>3</sub> is a CSS framework that seamlessly works with Bootstrap.
 
                 </center>
                 </p>
                 <hr>
-                <p class="fancy">I should put content here.</p>
+                <p class="fancy">create<sub>3</sub> is a new stylesheet for the next generation of web design. Working seamlessly with Bootstrap to help everyone see your message.
+                    <br>
+
+                    <h3>Advantages:</h3>
+                    <hr>
+                    <ul class="fancy">
+                        <li class="fancy" style="font-size:15px;">Looks fantastic</li>
+                        <li class="fancy" style="font-size:15px;">Simple</li>
+                        <li class="fancy" style="font-size:15px;">Lightweight</li>
+                        <li class="fancy" style="font-size:15px;">Easy to use</li>
+                        <li class="fancy" style="font-size:15px;">Built With Bootstrap</li>
+                        <li class="fancy" style="font-size:15px;">Works seamlessly with anything else</li>
+                    </ul>
+                </p>
+                <center>
+                    <h3>Download it today!</h3>
+                </center>
+                <hr>
+                <center>
+                    <div class="alert alert-warning">
+                        Downloads are currently not available. Sorry.
+                    </div>
+                </center>
                 <br>
             </div>
         </div>
@@ -46,7 +68,7 @@
         <p class="fancy" style="text-size:15px;"></p>
         <p id="copy" class="legible">
             <div style="float:right;margin-right:15px;">
-                <a style="text-decoration:none" class="fancy" href="create/">&#391;<sub>3</sub><sup>7&#9916;</sup></a>
+                <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
             </div>
     </center>
 </foot>
