--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="fancy" style="text-size:15px;"></p>
         <p id="copy" class="legible">
             <div style="float:right;margin-right:15px;">
-                <a style="text-decoration:none" class="fancy" href="create/">&#391;<sub>3</sub><sup>7&#9916;</sup></a>
+                <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
             </div>
     </center>
 </foot>
