--- a/404.html
+++ b/404.html
@@ -1,77 +1,69 @@
-
 <html>
-<title>Stormy's Website</title>
-<div class="tupperware">
-    <script>
-        console.log("Don't look at my horrible code pls")
-    </script>
+<title>stormy's website</title>
 
-    <head>
-        <img src="core/img/mainbg.jpg" class="hidden">
-        <!-- try to prefetch bg image-->
-        <!--css-->
-        <link rel="stylesheet" href="http://stormyjet.com/core/css/main.min.css">
-        <link rel="stylesheet" href="http://stormyjet.com/core/css/bootstrap.min.css">
-        <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
-        <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
-        <script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
-        <link rel="icon" type="image/png" href="http://stormyjet.com/core/img/favicon.png">
-        <!--favicon-->
+<script>
+    console.log("Don't look at my horrible code pls");
+</script>
 
+<head>
+    <!-- try to prefetch bg image-->
+    <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
+    <!--css-->
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/main.css">
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/bootstrap.mod.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
+    <div class="thisdivrocks">
         <div class="container">
-            <div class="title-anims">
-                <h1 class="spotlight">stormy's website</h1>
-            </div>
-        </div>
-        <!-- img prefetches -->
-        <link href="core/img/mainbg.jpg" rel="prefetch">
-        <!-- nav -->
-        <div class="nav"><a href="http://stormyjet.com">home</a> | <a href="http://stormyjet.com/code92/home">code<sup>92</sup></a> | <a href="http://stormyjet.com/contact">contact</a> |
-        </div>
-        <br>
-        <div class="alert alert-info" role="alert">
-            <center><strong>Hey, Listen!</strong> Meteor Game was finally released to the public! <a class="notlink" href="code92/meteor/index.html"><strong>Click here to check it out!</strong></a>
-            </center>
-        </div>
-        <div class="thisdivrocks">
-    </head>
-    <br>
-    <br>
-
-    <body>
-        <div class="container">
-            <div class="anim-up">
-                <div class="jumbotron">
-                    <h1 class="spotlight">You're lost!</h1>
-                    <p class="lead"><h2>
-                        <script>
-                            //var str = ;
-                            //str = str.replace("stormyjet.com", "");
-                            //document.write(str);
-                            document.write(document.URL)
-                        </script>
-                        isn't even real!</h2></p>
-                    <hr>
-
-                    <p class="lead">Some links for your pleasure</p>
-                    <p class="lead"> <a href="http://stormyjet.com/">go to the homepage</a>
-                        <br>
-                        <!--<a href="list.html">The List</a>-->
-                    <hr>
-                    <br>
-                    <br>
+            <div class="stage">
+                <div class="title-anims">
+                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
                 </div>
             </div>
         </div>
-    </body>
-    </div>
-    <foot>
-        <div class="container">
-            <hr>
-            <p class="lead">&copy; StormyJet 2015
-                <br>This website uses portions of code from the Twitter Bootstrap project</p>
+</head>
+
+<body>
+    <div class="container">
+        <div class="anim-up">
+            <div class="jumbotron">
+                <h1 class="spotlight">404</h1>
+                <center>
+                    <p class="fancy" id="url">
+                        <script>
+                            document.write(document.URL)
+                        </script>
+                        isn't actually real
+
+                </center>
+                </p>
+                <hr>
+                <center>
+                    <p class="fancy">Fantastic! You managed to get yourself lost. I hope you're happy.
+                        <br>
+                        <a href="http://stormyjet.com/">Click here to go back to the homepage.</a>
+                        <br>
+                        <a href="http://stormyjet.com/code92/">Click here for Code<sup>92</sup></a>
+                        <br>
+                        <a href="http://stormyjet.com/create/">Click here for create<sub>3</sub></a>
+                    </p>
+                </center>
+                <br>
+            </div>
         </div>
-    </foot>
-</div>
+    </div>
+    </div>
+</body>
+<foot>
+    <center>
+        <br>
+        <p class="fancy" style="text-size:15px;"></p>
+        <p id="copy" class="legible">
+            <div style="float:right;margin-right:15px;">
+                <a style="text-decoration:none" class="fancy" href="http://stormyjet.com/create/">create<sub>3</sub><sup>7&#9916;</sup></a>
+            </div>
+    </center>
+</foot>
+<!-- end of code-->
 
 </html>
