--- a/create/index.html
+++ b/create/index.html
@@ -52,9 +52,12 @@
                 </center>
                 <hr>
                 <center>
-                    <div class="alert alert-warning">
-                        Downloads are currently not available. Sorry.
+                    <div class="alert alert-success">
+                        <a href="../cdn/create/master/create.css" class="alert-link">Click here for the latest build</a>
+                        <br> You could <strong>download the css file</strong> or <strong>link that directly in your code for fast updates!</strong>
                     </div>
+
+
                 </center>
                 <br>
             </div>
