--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </center>
                 </p>
                 <hr>
-                <p class="fancy">I should put content here.</p>
+                <p class="fancy">Coding is fun and so are websites so i made a website using code from the internet. </p>
                 <br>
             </div>
         </div>
