--- a/create/index.html
+++ b/create/index.html
@@ -57,6 +57,14 @@
                         <br> You could <strong>download the css file</strong> or <strong>link that directly in your code for fast updates!</strong>
                     </div>
 
+                    <div class="alert alert-info">
+                        Want to have your custom create<sub>3</sub> stylesheet hosted here for quicker updates?
+                        <br>
+                        <a href="https://github.com/stormyjet/stormyjet.github.io/new/master/cdn/create" class="alert-link">Click here to paste in your code to request that </a>
+                        <br>
+                        <small>Hosted using the StormCDN</small>
+                    </div>
+
 
                 </center>
                 <br>
