--- a/create/index.html
+++ b/create/index.html
@@ -62,7 +62,7 @@
                         <br>
                         <a href="https://github.com/stormyjet/stormyjet.github.io/new/master/cdn/create" class="alert-link">Click here to paste in your code to request that </a>
                         <br>
-                        <small>Hosted using the StormCDN</small>
+                        <small>Powered by Storm<sup>CDN</sup></small>
                     </div>
 
 
@@ -76,11 +76,13 @@
 <foot>
     <center>
         <br>
-        <p class="fancy" style="text-size:15px;"></p>
-        <p id="copy" class="legible">
-            <div style="float:right;margin-right:15px;">
-                <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
-            </div>
+        <div style="float:right;margin-right:15px;">
+            <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
+        </div>
+        <p class="legible" style="font-size:15px;">Custom create<sub>3</sub> stylesheets are hosted <b>free of charge</b> using Storm<sup>CDN</sup>.
+            <br>They are uploaded using GitHub Pull Requests.
+            <br> If any tampering with non-custom sheets is found, the custom create<sub>3</sub> stylesheet will be terminated with no chance of being put back. Choose carefully.
+        </p>
     </center>
 </foot>
 <!-- end of code-->
