--- a/index.html
+++ b/index.html
@@ -1,55 +1,22 @@
 <html>
-<title>stormy's website</title>
-
-<script>
-    console.log("Don't look at my horrible code pls")
-</script>
-
-<head>
-    <!-- try to prefetch bg image-->
-    <link rel="prefetch" href="core/img/main-bg.jpg">
-    <!--css-->
-    <link rel="stylesheet" href="core/css/main.css">
-    <link rel="stylesheet" href="core/css/bootstrap.mod.css">
-    <link rel="stylesheet" href="core/css/anims.css">
-    <div class="thisdivrocks">
-        <div class="container">
-            <div class="stage">
-                <div class="title-anims">
-                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
-                </div>
-            </div>
-        </div>
-</head>
-
-<body>
-    <div class="container">
-        <div class="anim-up">
-            <div class="jumbotron">
-                <h1 class="spotlight">Hello</h1>
-                <center>
-                    <p class="fancy">My name is Stormy and this is my website
-
-                </center>
-                </p>
-                <hr>
-                <p class="fancy">I should put content here.</p>
-                <br>
-            </div>
-        </div>
-    </div>
-    </div>
-</body>
-<foot>
-    <center>
-        <br>
-        <p class="fancy" style="text-size:15px;"></p>
-        <p id="copy" class="legible">
-            <div style="float:right;margin-right:15px;">
-                <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
-            </div>
-    </center>
-</foot>
-<!-- end of code-->
+<title>CONNECTION INTERRUPTED AT THE REQUEST OF THE UNITED STATES GOVERNMENT -- EMERGENCY ALERT SYSTEM</title>
+<style>
+    .videoContainer {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+    }
+    
+    .videoContainer video {
+        min-width: 100%;
+        min-height: 100%;
+    }
+</style>
+<div class="videoContainer">
+    <video autoplay>
+        <source src="eas.mp4" type="video/mp4" /> THE EAS MESSAGE COULD NOT BE PLAYED
+    </video>
+</div>
 
 </html>
